# thermals

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  references.txt
assets/models/: ground.blend  ground.blend1  paper_plane.blend  paper_plane.blend1  paper_plane_nowalls.blend
assets/shaders/: clouds.frag  clouds.vert  fsquad.fsh  fsquad.vsh  image_test.vsh  model.fsh  model.vsh  raymarch.frag  raymarch.fsh  raymarch.vert  raymarch.vsh  raymarch_1.fsh  raymarch_2.fsh
include/ecs/: entity.hpp  meta.hpp  proxy.hpp  proxy.inl  view.hpp  view.inl  world.hpp
include/glue/: app.hpp  buffer.hpp  context.hpp  enum_utils.hpp  error.hpp  framebuffer.hpp  gc.hpp  glue.hpp  handle.hpp  image.hpp  input.hpp  shaders.hpp  texture.hpp  transform.hpp  vertex_array.hpp  window.hpp
shaders/: image_test.fsh  plane.vsh  raymarch_1.fsh
src/: app.cpp  app.hpp  assets_lib.hpp  cloud_scene.hpp  color.hpp  components.hpp  entity.hpp  flight.hpp  image.cpp  main.cpp  model_renderer.cpp  model_renderer.hpp  obj_loader.cpp  obj_loader.hpp  raymarcher.cpp  raymarcher.hpp  scene3d.cpp  scene3d.hpp  shader.cpp  shader.hpp  transform.cpp  window.hpp
src/ecs/: entity.cpp  world.cpp
src/engine/: app.cpp  assets_lib.hpp  components.hpp  model_renderer.cpp  noise.hpp  obj_loader.hpp  raymarcher.cpp  raymarcher.hpp  scene3d.cpp  scene3d.hpp  worley.hpp
src/imgui/: imconfig.h
